# prediction-market

./: .containerignore  .env.example  .gitignore  Containerfile  Makefile  README.md  pyproject.toml
config/: default.toml  political_keywords.toml
scripts/: backfill_markets.py  snapshot_political_markets.py
src/prediction_market/: __init__.py  cli.py  config.py  orchestrator.py
src/prediction_market/agents/: __init__.py  base.py  info_leak_detector.py  manipulation_guard.py
src/prediction_market/analysis/: __init__.py  correlation.py  liquidity_analyzer.py  price_analyzer.py  timeseries.py  volume_analyzer.py
src/prediction_market/reporting/: __init__.py  anomaly_report.py  human_formatter.py  json_formatter.py  sink.py
src/prediction_market/simulation/: __init__.py  copulas.py  distributions.py  importance_sampler.py  integration.py  monte_carlo.py  particle_filter.py
src/prediction_market/store/: database.py  models.py  (+2 more)
tests/: conftest.py
tests/fixtures/: gamma_markets.json  holders.json  orderbook.json  price_history.json  trades.json
tests/integration/: test_database.py  test_gamma_client.py  test_orchestrator.py  test_queries.py  test_reporting.py  test_snapshots.py
tests/unit/: test_abm.py  test_anomaly_report.py  test_clob_client.py  test_copulas.py  test_correlation.py  test_data_client.py  test_integration.py  test_liquidity_analyzer.py  test_models.py  test_news_checker.py  test_particle_filter.py  test_political_filter.py  test_price_analyzer.py  test_rate_limiter.py  test_simulation.py  test_timeseries.py  test_volume_analyzer.py
(+5 files in other folders)
